# specipy

./: README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: tests_tasks.toml
src/: __init__.py  base.py  extensions.py
tests/: test_base.py  test_composite.py  test_custom.py
