[tool.poetry]
name = "specipy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mypy = "^1.11.1"
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
poethepoet = "^0.27.0"
safety = "^3.2.4"
bandit = "^1.7.9"


[tool.black]
line-length = 95
target-version = ["py39", "py310", "py311", "py312"]
exclude = '''
/(
    \.git
  | \.eggs
  | \.idea
  | \__pycache__
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \venv
  | \front
  | \build
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "8.2.2"
# -ra - Shows a summary of tests that failed, were skipped, or xfail (expected to fail)
# -q - Runs pytest in quiet mode, showing only the summary of the test results
addopts = "-ra -q"
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.poe]
include = [
  "./cli/tests_tasks.toml",
  "./cli/fmt_tasks.toml",
  "./cli/type_check_tasks.toml",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
